# pdf-to-json-parser

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  start.sh
.github/workflows/: ci.yml
assets/: README.md
docs/: CONTRIBUTING.md  boban-metadata.md
evaluation/: README.md  gold.json
examples/: README.md  c2tc00123c.json  Статья 3.json
scripts/: eval_metadata.py  eval_pipeline.py
src/parser/: __main__.py  cli.py  equations.py  evaluation.py  extractor.py  figures.py  metadata.py  ocr.py  pipeline.py  schemas.py  sections.py
tests/: test_equations.py  test_evaluation.py  test_extractor.py  test_extractor_columns.py  test_figures.py  test_integration.py  test_metadata.py  test_ocr.py  test_pipeline.py  test_sections.py
training/: train_yolo.py
