[project]
name = "parser"
version = "0.1.0"
description = "PDF parser for scientific papers to structured JSON"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "loguru>=0.7.2",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pypdfium2>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
