[project]
name = "parser"
version = "0.1.0"
description = "PDF parser for scientific papers to structured JSON"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "loguru>=0.7.2",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pypdfium2>=5.9.0",
    "pandas>=2.3.3",
    "camelot-py>=1.0.9",
    "opencv-python>=4.13.0.92",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "ultralytics>=8.4.60",
    "huggingface-hub>=1.17.0",
    "doclayout-yolo>=0.0.4",
    "ollama>=0.6.2",
    "paddlepaddle>=3.3.1",
    "paddleocr>=3.6.0",
    "pix2tex>=0.1.4",
    "roboflow>=1.3.9",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests", "app.py"]

exclude = [
    ".venv",
    "venv",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = [
    "fitz.*",
    "pandas.*",
    "cv2.*",
    "ultralytics.*",
    "paddleocr.*",
    "paddle.*",
    "pix2tex.*",
    "PIL.*",
    "doclayout_yolo.*",
    "huggingface_hub.*",
    "loguru.*",
    "typer.*",
    "ollama.*",
    "streamlit.*"
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
